// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTests Views can adjust backface visibility 1`] = `
{
  "AutomationId": "backface-visibility",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 200,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 29,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": "#FF0000FF",
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 200,
      "HorizontalAlignment": "Stretch",
      "Left": 259,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 200,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 83,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Front",
          "Top": 90,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 33,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": "#FFFF0000",
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 200,
      "HorizontalAlignment": "Stretch",
      "Left": 259,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 200,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 8,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Back (You should not see this)",
          "Top": 90,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 184,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can adjust backface visibility 2 1`] = `
{
  "AutomationId": "backface-visibility-2",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 200,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 268,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": "#FF0000FF",
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 200,
      "HorizontalAlignment": "Stretch",
      "Left": 259,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 200,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 6,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Front (You should not see this)",
          "Top": 90,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 188,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": "#FFFF0000",
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 200,
      "HorizontalAlignment": "Stretch",
      "Left": 259,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 200,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 85,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Back",
          "Top": 90,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 29,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have a custom nativeID 1`] = `
{
  "AutomationId": "nativeid",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "A View with a nativeID "native-id-view"",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`ViewTests Views can have accessibility customization 1`] = `
{
  "AutomationId": "accessibility",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 57,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 57,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "A View with accessibility values.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Current Number of Accessibility Taps: 0",
              "Top": 19,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#00000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Top": 38,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "This element should be hidden from accessibility.",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have background colors 1`] = `
{
  "AutomationId": "background-color",
  "Background": "#FF527FE4",
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 25,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 15,
      "HorizontalAlignment": "Stretch",
      "Left": 5,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Blue background",
      "Top": 5,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 708,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`ViewTests Views can have borders 1`] = `
{
  "AutomationId": "border",
  "Background": null,
  "BorderBrush": "#FF527FE4",
  "BorderThickness": "5,5,5,5",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 45,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 15,
      "HorizontalAlignment": "Stretch",
      "Left": 15,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "5px blue border",
      "Top": 15,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 688,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Background": null,
      "BorderBrush": "#FF527FE4",
      "BorderThickness": "5,5,5,5",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.Border",
    },
  ],
}
`;

exports[`ViewTests Views can have overflow 1`] = `
{
  "AutomationId": "overflow",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 20,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 12,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 95,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 10,
          "HorizontalAlignment": "Stretch",
          "Left": 1,
          "Margin": "0,0,0,0",
          "Top": 1,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 93,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 20,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "undefined",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 200,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 12,
      "HorizontalAlignment": "Stretch",
      "Left": 111,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 95,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "0,0,0,0",
          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 10,
          "HorizontalAlignment": "Stretch",
          "Left": 1,
          "Margin": "0,0,0,0",
          "Top": 1,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 93,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 20,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "hidden",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 200,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 12,
      "HorizontalAlignment": "Stretch",
      "Left": 222,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 95,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 10,
          "HorizontalAlignment": "Stretch",
          "Left": 1,
          "Margin": "0,0,0,0",
          "Top": 1,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 93,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 20,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "visible",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 200,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have padding and margins 1`] = `
{
  "AutomationId": "padding-margin",
  "Background": null,
  "BorderBrush": "#FFBB0000",
  "BorderThickness": "0.5,0.5,0.5,0.5",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 107,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": "#FF527FE4",
      "BorderBrush": "#FF000033",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 27,
      "HorizontalAlignment": "Stretch",
      "Left": 1,
      "Margin": "0,0,0,0",
      "Top": 1,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 717,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 6,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "5px padding",
          "Top": 6,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 705,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Background": null,
          "BorderBrush": "#FF000033",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Border",
        },
      ],
    },
    {
      "Background": "#FF527FE4",
      "BorderBrush": "#FF000033",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 17,
      "HorizontalAlignment": "Stretch",
      "Left": 6,
      "Margin": "0,0,0,0",
      "Top": 33,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 707,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 1,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "5px margin",
          "Top": 1,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 705,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Background": null,
          "BorderBrush": "#FF000033",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Border",
        },
      ],
    },
    {
      "Background": "#FF527FE4",
      "BorderBrush": "#FF000033",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 42,
      "HorizontalAlignment": "Stretch",
      "Left": 6,
      "Margin": "0,0,0,0",
      "Top": 60,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 134,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 6,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "5px margin and padding,",
          "Top": 6,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 122,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 6,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "widthAutonomous=true",
          "Top": 21,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 122,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Background": null,
          "BorderBrush": "#FF000033",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Border",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#FFBB0000",
      "BorderThickness": "0.5,0.5,0.5,0.5",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.Border",
    },
  ],
}
`;

exports[`ViewTests Views can have ranging opacity 1`] = `
{
  "AutomationId": "opacity",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 133,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0.1",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0.3",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 57,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0.5",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 76,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0.7",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 95,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 0.9",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 114,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Opacity 1",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have rounded borders 1`] = `
{
  "AutomationId": "rounded-borders",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 50,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "25,25,25,25",
      "FlowDirection": "LeftToRight",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 50,
      "XamlType": "Windows.UI.Xaml.Controls.Border",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "25,25,25,25",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Microsoft.ReactNative.ViewPanel",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "25,25,25,25",
      "FlowDirection": "LeftToRight",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 60,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 50,
      "XamlType": "Windows.UI.Xaml.Controls.Border",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "10,10,10,10",
          "Clip": null,
          "CornerRadius": "25,25,25,25",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Microsoft.ReactNative.ViewPanel",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "5,10,25,25",
      "FlowDirection": "LeftToRight",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 120,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 50,
      "XamlType": "Windows.UI.Xaml.Controls.Border",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "5,10,25,25",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Microsoft.ReactNative.ViewPanel",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "5,10,25,25",
      "FlowDirection": "LeftToRight",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 180,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 50,
      "XamlType": "Windows.UI.Xaml.Controls.Border",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#00000000",
          "BorderThickness": "10,10,10,10",
          "Clip": null,
          "CornerRadius": "5,10,25,25",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Microsoft.ReactNative.ViewPanel",
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have tool tips 1`] = `
{
  "AutomationId": "tool-tip",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 45,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 15,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This Parent View has tooltip "Parent View"",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 15,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 15,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "This view has tooltip "Child View 1"",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 15,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 30,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 15,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "This view has tooltip "Child View 2"",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have unique border width and radius per edge/corner 1`] = `
{
  "AutomationId": "advanced-border",
  "Background": "#FF808080",
  "BorderBrush": "#FFFFA500",
  "BorderThickness": "10,20,15,5",
  "Clip": null,
  "CornerRadius": "3,2,1,4",
  "FlowDirection": "LeftToRight",
  "Height": 50,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 50,
  "XamlType": "Windows.UI.Xaml.Controls.Border",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#FFFFA500",
      "BorderThickness": "10,20,15,5",
      "Clip": null,
      "CornerRadius": "3,2,1,4",
      "FlowDirection": "LeftToRight",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Microsoft.ReactNative.ViewPanel",
    },
  ],
}
`;
